--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.0",
     "@prisma/client": "^5.19.1",
     "class-validator": "^0.14.1",
     "isomorphic-fetch": "^3.0.0",
+    "passport": "^0.7.0",
+    "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.23.8"
