feat: pagination and return assigments

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
+# API
+PORT=3000
+API_KEY=insecure
+
 # PRISMA
 DATABASE_URL=postgres://postgres:789523146@postgres:5432/dashboard_db
+
+# MICROSOFT
+MICROSOFT_CLIENT_ID=ede6f352-aaf4-4918-bdb5-24b610d4f579
+MICROSOFT_CLIENT_SECRET=
+MICROSOFT_TENANT_ID=e3e57fda-3690-4162-8988-1aa74cebfe84
