--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.1.0",
     "@prisma/client": "^5.19.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "isomorphic-fetch": "^3.0.0",
     "passport": "^0.7.0",
