--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "isomorphic-fetch": "^3.0.0",
+    "luxon": "^3.5.0",
     "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "reflect-metadata": "^0.2.0",
