--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -34,7 +34,9 @@ jobs:
 
       - name: Update production server
         run: |
-          install -m 600 -D /dev/null ~/.ssh/id_rsa
+          touch ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
           echo "${{ secrets.SSH_PRODUCTION_KEY }}" > ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.PRODUCTION_HOST }} > ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.PRODUCTION_HOST }} >> ~/.ssh/known_hosts
           ssh ec2-user@${{ secrets.PRODUCTION_HOST }} "./update_server.sh"
+
