--- a/.github/workflows/production-deploy.yml
+++ b/.github/workflows/production-deploy.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Update production server
         run: |
+          mkdir -p ~/.ssh
           touch ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           echo "${{ secrets.SSH_PRODUCTION_KEY }}" > ~/.ssh/id_rsa
