--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@prisma/client": "^5.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "collections": "^5.1.13",
     "isomorphic-fetch": "^3.0.0",
     "luxon": "^3.5.0",
     "passport": "^0.7.0",
